<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/backgroundGradient"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buatAkun"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:textSize="12sp"
            android:hint="@string/username"
            android:padding="14dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:hintTextColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:textSize="12sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/register_title"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveAcc"
        android:textSize="11sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/footer"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />
</androidx.constraintlayout.widget.ConstraintLayout>
